--- a/global.css
+++ b/global.css
@@ -34,3 +34,11 @@ body {
     height: 100%;
     pointer-events: none;
   }
+
+svg circle {
+  fill: steelblue;
+  fill-opacity: 0.6;  /* 60% opacity */
+  stroke: white;
+  stroke-width: 1;
+  pointer-events: auto
+}
